# GreenTensor-Carbon-Aware-MLOps

./: .gitignore  CHANGELOG.md  GREENTENSOR_DIFFERENCE.md  GreenTensor_Code_EDA.py  GreenTensor_Code_EDA_README.md  GreenTensor_Complete_EDA.md  GreenTensor_Complete_Guide.ipynb  GreenTensor_Demo.ipynb  GreenTensor_VC_Demo.ipynb  LICENSE  OPT_1.3B_COMPARISON_RESULTS.md  OPT_1.3B_Real_Test.ipynb  OPT_Training_Comparison.ipynb  QUICK_START.md  README.md  clear_comparison_demo.py  complete_comparison_with_security.py  conftest.py  design.md  diagnose.py  opt_training_comparison.py  pyproject.toml  realworld_demo.py  requirements.txt  run_opt_training_test.py  run_stress_test.py  run_test.bat  simple_numpy_comparison.py  simple_opt_demo.py  simple_test.py  stress_test_greentensor.py  test_greentensor_basic.py  test_imports.py  test_opt_simple.py  test_output.txt  test_result.txt  test_simple.py  test_torch_import.py
.github/workflows/: test.yml
dashboard/: app.py  observability.py
examples/: baseline.py  optimized.py  train_baseline.py  train_optimized.py
greentensor/: __init__.py
greentensor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
greentensor/alerts/: webhooks.py
greentensor/core/: budget.py  context.py  history.py  profiler.py  tracker.py
greentensor/integrations/: huggingface.py  lightning.py
greentensor/optimizers/: batch_optimizer.py  gpu_optimizer.py  idle_optimizer.py  recommender.py
greentensor/report/: esg.py  metrics.py  report.py
greentensor/scheduler/: carbon_scheduler.py
greentensor/security/: __init__.py  anomaly_detector.py  digital_footprint.py  pattern_matcher.py
greentensor/water/: aquatensor.py
tests/: test_anomaly_detector.py  test_batch_optimizer.py  test_budget.py  test_config.py  test_context.py  test_digital_footprint.py  test_metrics.py  test_profiler.py  test_recommender.py  test_report.py  test_scheduler.py  test_water.py
