[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greentensor"
version = "0.3.0"
description = "Energy-efficient, security-aware middleware for PyTorch ML workloads — carbon tracking, GPU optimization, and malware detection via alibi-detect and LLM Guard."
readme = "README.md"
license = "MIT"
authors = [{ name = "Dhivya Balakumar", email = "dhivyabalakumar28@gmail.com" }]
keywords = ["green ai", "carbon", "energy", "pytorch", "sustainability", "mlops"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
]
requires-python = ">=3.9"
dependencies = ["torch", "numpy", "codecarbon", "psutil", "streamlit"]

[project.optional-dependencies]
security = ["alibi-detect", "llm-guard"]
all = ["alibi-detect", "llm-guard"]

[project.urls]
Homepage = "https://github.com/DhivyaBalakumar/GreenTensor-Carbon-Aware-MLOps/"
Issues = "https://github.com/DhivyaBalakumar/GreenTensor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["greentensor*"]
exclude = ["tests*"]
